--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.49MB/s(Youtube:不良林), server: 38.114.114.19, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇸🇬 新加坡-546.5KB/s(Youtube:不良林), server: 18.140.1.222, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林), server: 213.183.53.207, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-790.1KB/s(Youtube:不良林), server: hk22.swty.buzz, port: 12155, type: vmess, uuid: e152429a-8e95-4f53-bb88-e92a62682fcf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk22.swty.buzz}}
+  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 213.183.53.182, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
+  - {name: 🇯🇵 日本-2.61MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.86.135.36, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-546.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-790.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
