--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.23MB/s(Youtube:不良林), server: 213.183.59.185, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-2.68MB/s(Youtube:不良林), server: 38.75.136.102, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林), server: 213.183.53.182, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇯🇵 日本-2.61MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-2.52MB/s(Youtube:不良林), server: 38.86.135.36, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 保加利亚-437.2KB/s(Youtube:不良林), server: 213.183.63.218, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 134.195.198.95, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: 38.75.136.102, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-213.2KB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-2.36MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇦 加拿大-1.42MB/s(Youtube:不良林), server: 134.195.198.95, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
   - {name: 🇨🇦 加拿大-2.25MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇨🇦 加拿大-1.53MB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.68MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.62MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.52MB/s(Youtube:不良林)
+      - 保加利亚-437.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.36MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.42MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.25MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.53MB/s(Youtube:不良林)
